// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id           Int     @id @default(autoincrement())
  email        String  @unique
  name         String?
  hashPassword String
  role         UserRole    @default(USER)

  hobbies Hobby[]
  profile Profile?
  posts   Post[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Hobby {
  id     Int    @id @default(autoincrement())
  name   String
  user   User?  @relation(references: [id], fields: [userId])
  userId Int?
}

model Profile {
  id  Int    @id @default(autoincrement())
  bio String

  user   User @relation(fields: [userId], references: [id])
  userId Int  @unique
}

model Post {
  id    Int    @id @default(autoincrement())
  title String

  categories Category[]
  author     User       @relation(fields: [authorId], references: [id])
  authorId   Int

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Category {
  id    Int    @id @default(autoincrement())
  name  String
  posts Post[]
}

// ------

enum UserRole {
  USER
  ADMIN
}