//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  name String
  hashPassword String [not null]
  role UserRole [not null, default: 'USER']
  hobbies Hobby [not null]
  profile Profile
  posts Post [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Hobby {
  id Int [pk, increment]
  name String [not null]
  user User
  userId Int
}

Table Profile {
  id Int [pk, increment]
  bio String [not null]
  user User [not null]
  userId Int [unique, not null]
}

Table Post {
  id Int [pk, increment]
  title String [not null]
  categories Category [not null]
  author User [not null]
  authorId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  posts Post [not null]
}

Enum UserRole {
  USER
  ADMIN
}

Ref: Hobby.userId > User.id

Ref: Profile.userId - User.id

Ref: Post.authorId > User.id